--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.3",
     "firebase": "^8.2.0",
-    "next": "12.0.7",
+    "next": "^12.3.4",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-router-dom": "^6.11.0",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
