--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "@material-ui/icons": "^4.11.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.3",
-    "firebase": "^8.2.0",
+    "firebase": "^8.10.1",
     "next": "^12.3.4",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
-    "react-router-dom": "^6.11.0"
+    "react-router-dom": "^6.11.0",
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
