--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bootstrap": "^5.1.3",
     "firebase": "^8.2.0",
     "next": "^12.3.4",
@@ -28,7 +28,8 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
-    "react-router-dom": "^6.11.0"
+    "react-router-dom": "^6.11.0",
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
@@ -43,5 +44,8 @@
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
     "prettier": "^2.4.1"
-  }
+  },
+    "resolutions": {
+      "styled-components": "^5"
+    }
 }
