--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
+    "react-dom": "17.0.2",
     "react-router-dom": "^6.11.0",
-    "react-dom": "17.0.2"
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
@@ -43,5 +44,8 @@
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
     "prettier": "^2.4.1"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
